[Harmony Cast Dialog] Disable the Cast button when all sinks disappear

Clicking on the Cast button when there are no sinks causes a crash.
This CL disables the button when the dialog goes from having sinks to
empty.

Bug: 857224
Change-Id: I8040aef278d28fbc6e6b03c04e9ff9103156ea44
Reviewed-on: https://chromium-review.googlesource.com/1119531
Reviewed-by: mark a. foltz <mfoltz@chromium.org>
Commit-Queue: Takumi Fujimoto <takumif@chromium.org>
Cr-Commit-Position: refs/heads/master@{#572304}
Former-commit-id: d344e1dd7e6793d36d00a41f64e1d92c21fb27f4